code/typescript/RealTimeNews/v3/docs/PostNewsArticleListByInstrumentRequestDataIdentifier.md
# realtimenews.PostNewsArticleListByInstrumentRequestDataIdentifier

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**values** | **[String]** | Set of identifiers to resolve. | 
**type** | **String** | Type of the identifier. | 



## Enum: TypeEnum


* `idInstrument` (value: `"idInstrument"`)

* `idNotation` (value: `"idNotation"`)

* `fdsPermanentIdentifierSecurity` (value: `"fdsPermanentIdentifierSecurity"`)

* `fdsPermanentIdentifierListing` (value: `"fdsPermanentIdentifierListing"`)

* `fdsPermanentIdentifierRegional` (value: `"fdsPermanentIdentifierRegional"`)

* `tickerExchange` (value: `"tickerExchange"`)

* `tickerRegion` (value: `"tickerRegion"`)

* `sedol` (value: `"sedol"`)

* `isin` (value: `"isin"`)

* `wkn` (value: `"wkn"`)

* `valor` (value: `"valor"`)

* `cusip` (value: `"cusip"`)




