code/typescript/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestDataIdentifier.md
# realtimenews.PostNewsArticleListByInstrumentRequestDataIdentifier

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**values** | **[String]** | Set of identifiers to resolve. | 
**type** | **String** | Type of the identifier. | Value | Description | | --- | --- | | idInstrument | MDG identifier of an instrument. | | idNotation | MDG identifier of a listing. | | fdsPermanentIdentifierSecurity | FactSet Permanent Identifier on security level. | | fdsPermanentIdentifierListing | FactSet Permanent Identifier on listing level. | | fdsPermanentIdentifierRegional | Regional FactSet Permanent Identifier. | | tickerExchange | FactSet market symbol of a listing. | | tickerRegion | Regional FactSet ticker symbol. | | sedol | SEDOL or IDII of a listing. | | isin | ISIN of an instrument. | | wkn | WKN of an instrument. | | valor | Valor number of an instrument. | | cusip | CUSIP or CINS identifier of an instrument |   | 



## Enum: TypeEnum


* `idInstrument` (value: `"idInstrument"`)

* `idNotation` (value: `"idNotation"`)

* `fdsPermanentIdentifierSecurity` (value: `"fdsPermanentIdentifierSecurity"`)

* `fdsPermanentIdentifierListing` (value: `"fdsPermanentIdentifierListing"`)

* `fdsPermanentIdentifierRegional` (value: `"fdsPermanentIdentifierRegional"`)

* `tickerExchange` (value: `"tickerExchange"`)

* `tickerRegion` (value: `"tickerRegion"`)

* `sedol` (value: `"sedol"`)

* `isin` (value: `"isin"`)

* `wkn` (value: `"wkn"`)

* `valor` (value: `"valor"`)

* `cusip` (value: `"cusip"`)




